--- a/src/components/HomeNews.module.scss
+++ b/src/components/HomeNews.module.scss
@@ -21,6 +21,9 @@
     @media screen and (min-width: 667px) and (max-width: 1023px){
         grid-template-columns: repeat(2, 1fr);
     }
+    @media screen and (min-width: 1600px){
+        grid-column-gap: 3.5rem;
+    }
 }
 .buttonWrapper{
     margin-top: 2rem;
